<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Colin Walters.  All rights reserved.
  -->

<resources>
	<string name="app_name">Light and Shape</string>
	<string name="misses">Misses</string>
	<string name="game_over">Game Over</string>
	<string name="high_score_input_dialog_positive_message">Please enter your initials.</string>
	<string name="settings">Settings</string>
	<string name="high_score">High Score</string>
	<string name="game_over_intent_parameter">com.mycompany.lightandshape.controller.gameover</string>
	<string name="string_score_intent_parameter">com.mycompany.lightandshape.controller.stringscore</string>
	<string name="rank">Rank</string>
	<string name="time">Time</string>
	<string name="initials">Initials</string>
	<string name="high_score_input_dialog_negative_message">This is not a high score.</string>
	<string name="index_intent_parameter">com.mycompany.lightandshape.controller.index</string>
	<string name="your_score_is">Your score is:</string>
	<string name="long_score_intent_parameter">com.mycompany.lightandshape.controller.longscore</string>
	<string name="high_score_updated">High score updated</string>
	<string name="high_score_not_updated">High score not updated</string>
	<string name="settings_dialog_positive_message">Setting updated</string>
	<string name="settings_dialog_negative_message">Setting not updated</string>
	<string name="high_score_dialog_hint">AAA</string>
	<string name="help_text">Each light spins around showing the coloured target shapes.  The direction of a light beam\'s rotation may change after one full revolution from its starting position.\n\nTap on the target shapes which match the shapes to find displayed at the top of the screen.  If a target shape is correctly selected, a new target shape is created to replace the found shape and a new find shape appears at the top of the screen.  The new target shape flashes for a while, if it is displayed within the light beams.  A target shape can still be selected while it is in this flashing new shape state, but will not count as a miss if it goes into the dark.\n\nDoing one of the following results in the misses left being reduced: selecting a target shape which does not match a find shape displayed at the top of the screen, if a target shape which matches a find shape has all of its edges shown by the light beams and you do not tap on it before it goes back into the dark again, missing a target shape completely in the light beam area, tapping in the dark area outside of the light beams.  The maximum number of misses at any time within the game is restricted to the number of find shapes.\n\nStop and restart the game using the pause and resume options.  The game is paused when leaving the app.  Choose the resume option to restart or the abandon option to exit the game.\n\nWhen you have exceeded the maximum number of misses allowed, the game is over and your score is the time lasted.\n\nVarious settings, such as the number of light sources, can be adjusted through the settings option.  The target shapes move when selecting a speed setting of 4–6, but not for speed settings 1–3.  The light beams move at the slowest speed for speed settings 1 and 4, and move at the fastest speed for speed settings 3 and 6.\n\nThe high score option shows the top ten scores. Selecting one of these scores shows the settings for that particular game.</string>
	<string name="help">Help</string>
	<string name="application_version_name">1.0</string>
	<string name="version">Version</string>
	<string name="copyright">Copyright ©</string>
	<string name="my_name">Colin Walters</string>
	<string name="all_rights_reserved">All rights reserved.</string>
	<string name="about">About</string>
	<string name="creation_year">2023</string>
    <string name="resume_game">Resume Game</string>
	<string name="abandon_game">Abandon Game</string>
	<string name="game_paused">Game Paused</string>
    <string name="pause">Pause</string>
	<string name="play">Play</string>
	<string name="reset_data">Reset Data</string>
	<string name="data_has_been_reset">Data has been reset</string>
	<string name="reset_data_warning">WARNING: All settings will be reset and all high scores will be removed.</string>
	<string name="data_has_not_been_reset">Data has not been reset</string>
	<string name="rate">Rate</string>
</resources>